# GraphPyShop

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: checks.yml  release.yml
graphpyshop/: __init__.py  __main__.py  generate.py  profiler.py
graphpyshop/client/: __init__.py  bulk_operation.py  bulk_operation_cancel.py  bulk_operation_run_mutation.py  bulk_operation_run_query.py  client.py  collections.py  current_bulk_operation.py  customers.py  enums.py  input_types.py  operations.py  orders.py  product_variants.py  products.py  shopify_async_base_client.py  subscription_billing_cycles.py  subscription_contracts.py  webhook_subscription_create.py  webhook_subscription_delete.py  webhook_subscription_update.py  webhook_subscriptions.py
graphpyshop/extensions/: __init__.py  shopify_async_base_client.py  shopify_bulk_queries_plugin.py  shopify_generate_queries.py
graphpyshop/queries/: abandonment.graphql  abandonmentByAbandonedCheckoutId.graphql  app.graphql  appByHandle.graphql  appByKey.graphql  appCredits.graphql  appDiscountType.graphql  appDiscountTypes.graphql  appInstallation.graphql  appInstallations.graphql  assignedFulfillmentOrders.graphql  asyncProductMutationJobResult.graphql  automaticDiscountNode.graphql  automaticDiscountNodes.graphql  automaticDiscountSavedSearches.graphql  availableCarrierServices.graphql  availableLocales.graphql  balanceAccount.graphql  bulkOperation.graphql  bulkOperationRunMutation.graphql  bundleCount.graphql  carrierService.graphql  carrierServices.graphql  cartTransforms.graphql  cashTrackingSession.graphql  cashTrackingSessions.graphql  catalog.graphql  catalogOperations.graphql  catalogs.graphql  catalogsCount.graphql  checkoutBranding.graphql  checkoutProfile.graphql  checkoutProfiles.graphql  codeDiscountNode.graphql  codeDiscountNodeByCode.graphql  codeDiscountNodes.graphql  codeDiscountSavedSearches.graphql  collection.graphql  collectionByHandle.graphql  collectionRulesConditions.graphql  (+186 more)
graphpyshop/queries/internal/: bulkOperationCancel.graphql  bulkOperationRunQuery.graphql  subscriptionBillingCycles.graphql  subscriptionContracts.graphql  webhookSubscriptions.graphql
graphpyshop/queries/lists/: appCredits.graphql  appInstallations.graphql  assignedFulfillmentOrders.graphql  automaticDiscountNodes.graphql  automaticDiscountSavedSearches.graphql  carrierServices.graphql  cartTransforms.graphql  cashTrackingSessions.graphql  catalogs.graphql  checkoutProfiles.graphql  codeDiscountNodes.graphql  codeDiscountSavedSearches.graphql  collectionSavedSearches.graphql  collections.graphql  companies.graphql  companyLocations.graphql  customerSegmentMembers.graphql  customers.graphql  deletionEvents.graphql  deliveryCustomizations.graphql  deliveryProfiles.graphql  discountNodes.graphql  discountRedeemCodeSavedSearches.graphql  draftOrderSavedSearches.graphql  draftOrders.graphql  fileSavedSearches.graphql  files.graphql  fulfillmentOrders.graphql  gateConfigurations.graphql  giftCards.graphql  inventoryItems.graphql  (+44 more)
tests/: requirements-dev.in  requirements-dev.txt  ruff.toml
tests/extensions/: test_shopify_async_base_client.py
tests/generate_queries/: test_query_generation.py  test_query_graphql_specific.py
(+136 files in other folders)
