[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel", "python-dotenv", "ariadne-codegen"]
build-backend = "setuptools.build_meta"

[project]
name = "GraphPyShop"
dynamic = ["version"]
authors = [{ name = "Martin Salo", email = "martin@yummy.eu" }]
readme = "README.md"
description = "Shopify client for Python using automatic code generation, so it's always up to date"
dependencies = ["httpx","pydantic","ariadne-codegen", "python-dotenv", "graphql-core"]

[project.urls]
Home = "https://github.com/yummyshop/GraphPyShop"

[project.scripts]
generate-client = "graphpyshop:generate_client"
generate-queries = "graphpyshop:generate_queries"
clean = "graphpyshop:clean"

[tool.ariadne-codegen]
queries_path = "./graphpyshop/queries"
remote_schema_url = "https://clean-kitchen-meal-kits.myshopify.com/admin/api/unstable/graphql.json"
remote_schema_headers = { "X-Shopify-Access-Token" = "$SHOPIFY_ACCESS_TOKEN" }
remote_schema_verify_ssl = false
target_package_name = "client"
target_package_path = "./graphpyshop"
include_all_inputs = false
include_all_enums = false
client_name = "ShopifyClient"
base_client_name = "ShopifyAsyncBaseClient"
base_client_file_path = "./graphpyshop/extensions/shopify_async_base_client.py"
plugins = [
    "ariadne_codegen.contrib.extract_operations.ExtractOperationsPlugin",
    "ariadne_codegen.contrib.shorter_results.ShorterResultsPlugin",
    "ariadne_codegen.contrib.client_forward_refs.ClientForwardRefsPlugin",
    "ariadne_codegen.contrib.no_reimports.NoReimportsPlugin",
    "graphpyshop.extensions.ShopifyBulkQueriesPlugin",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-vv --tb=native --color=yes"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["graphpyshop*"]
